# litellm-free-models

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  PRICING.md  README.md  SECURITY.md  config.template.yaml  docker-compose.yaml  find-shared-models.py  onboard.py  opencode-config.py  providers_config.py  pyproject.toml  render-config.py  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config_question.md  feature_request.md
.github/workflows/: ci.yml  sync-models.yml
k8s/: deployment.yaml  ingress.yaml  networkpolicy.yaml  postgres-backup-cronjob.yaml  postgres-backup-pvc.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml.template  postgres-service.yaml  secret.yaml.template  service.yaml
k8s/redis/: deployment.yaml  kustomization.yaml  secret.yaml.template  service.yaml
multi-instance/: .env.example  README.md  docker-compose.yaml  generate-config.py
multi-instance/k8s/: kustomization.yaml  namespace.yaml  secret.yaml.template
multi-instance/k8s/master/: deployment.yaml  service.yaml
multi-instance/k8s/slave/: deployment.yaml  (+1 more)
multi-instance/master/: .env.example
multi-instance/slave1/: .env.example
multi-instance/slave2/: .env.example
tests/: __init__.py  _loader.py  test_config_invariants.py  test_find_shared_models.py  test_multi_instance.py  test_onboard.py  test_opencode_config.py  test_providers_config.py  test_render_config.py
