[project]
name = "litellm-free-models"
version = "0.1.0"
description = "LiteLLM proxy that aggregates free LLM APIs from multiple providers, with load balancing, cooldown, and fallback chains."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "sb" },
]
readme = "README.md"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".cache",
    "k8s/",
    "multi-instance/k8s/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",
    "E402",
    "W503",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
